# BldStructPred

./: CHANGELOG.md  Example1.py  Example2.py  README.md  README_CN.md  pyproject.toml  requirements.txt
BldStructClassify/: StructClassify.py
BldStructPred/: StructPred.py
BldStructPred/data/: 高德POI分类与编码（中英文）_V1.06_20230208.xlsx
Examples/: Example1.py  Example2.py
data/: TrainedRF.pkl  TrainedRF_noPOI.pkl
